--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,9 @@ body {
 #app {
 	max-width: 100%;
 	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media (prefers-color-scheme: light) {
